--- a/main.css
+++ b/main.css
@@ -15,7 +15,6 @@ body {
 p {
   text-align: center;
   font-size: 1.5em;
- 
 }
 
 h1,
@@ -43,7 +42,6 @@ ul li {
 #question {
   display: inline-block;
   margin-left: 70px;
-
 }
 /*=====================================================
 CONTAINER
@@ -51,7 +49,7 @@ CONTAINER
 
 .container {
   margin: 0 auto;
-  width: 50%;
+  width: 80%;
   background-color: #F9F9F9;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, .65);
 }
@@ -73,17 +71,18 @@ CONTAINER
 #questionHeader {
   display: inline-block;
 }
+
 /*=====================================================
-  BUTTONS
+  BUTTON ELEMENTS
 =====================================================*/
 
 #btnNext,
 #btnBack {
-  width: 50px;
+  width: 80px;
   height: 50px;
   float: right;
   text-align: center;
-  positioN: relative;
+  position: relative;
   bottom: 50px;
   font-family: 'Nobile', sans-serif;
   font-size: .9em;
@@ -103,4 +102,66 @@ CONTAINER
 #btnBack {
   background-color: #D43737;
   border-bottom: 3px solid #910404;
+}
+/*=====================================================
+  MEDIA QUERIES
+=====================================================*/
+
+@media (max-width: 1024px) {
+  p {
+    font-size: 1.2em;
+  }
+  h1 {
+    font-size: 1.5em;
+  }
+  h2 {
+    font-size: 1.2em;
+  }
+  .container {
+    width: 90%;
+  }
+}
+@media (max-width: 769px) {
+  .container {
+    width: 90%;
+  }
+}
+@media (max-width: 420px) {
+  .container {
+    width: 90%;
+    height: 522px;
+  }
+  #btnNext,
+  #btnBack {
+    position: relative;
+    bottom: -10px;
+    right: 0;
+    width: 50px;
+    height: 40px;
+    font-size: .75em;
+    display: inline-block;
+  }
+  #questionHeader {
+    /*font-size: .8em;
+    margin: 0 20px;*/
+    display: none;
+  }
+  #logo {
+    margin: 10px;
+    font-size: 1em;
+  }
+  #question {
+    font-size: .95em;
+    margin: 10px;
+    font-weight: 700;
+  }
+  h1 {
+    margin: 5px;
+  }
+  #answers {
+    font-size: .7em;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+  }
 }
